--- a/App/src/adl/go/gui/HeliumDialog.form
+++ b/App/src/adl/go/gui/HeliumDialog.form
@@ -43,14 +43,24 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="heliumIntroLabel" pref="0" max="32767" attributes="0"/>
                       <Component id="heliumLabel" alignment="0" pref="493" max="32767" attributes="0"/>
                       <Component id="closeButtonPanel" alignment="0" pref="493" max="32767" attributes="0"/>
-                      <Component id="heliumImg" alignment="0" pref="493" max="32767" attributes="2"/>
                       <Component id="hyperlinkLabel1" alignment="0" max="32767" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="heliumIntroLabel" pref="0" max="32767" attributes="0"/>
+                              <Component id="heliumIntroLabel1" alignment="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="heliumImg1" alignment="1" max="32767" attributes="2"/>
+                              <Component id="heliumImg" alignment="1" max="32767" attributes="2"/>
+                          </Group>
+                      </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -62,14 +72,25 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="heliumLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="heliumIntroLabel" min="-2" pref="52" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="heliumImg" min="-2" pref="193" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="heliumImg" min="-2" pref="140" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Component id="heliumImg1" min="-2" pref="140" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Component id="heliumIntroLabel1" min="-2" pref="45" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="heliumIntroLabel" min="-2" pref="230" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                   <Component id="hyperlinkLabel1" min="-2" pref="35" max="-2" attributes="1"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="closeButtonPanel" min="-2" pref="35" max="-2" attributes="0"/>
-                  <EmptySpace pref="14" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -116,13 +137,15 @@
           </Properties>
           <Events>
             <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseReleased"/>
-            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseEntered"/>
             <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseExited"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseEntered"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="heliumImg">
           <Properties>
-            <Property name="text" type="java.lang.String" value="This should be a screenshot ..."/>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/adl/go/images/helium_calendar.png"/>
+            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="heliumLabel">
@@ -138,8 +161,31 @@
         </Component>
         <Component class="javax.swing.JLabel" name="heliumIntroLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Guess what! Get Organized has been replaced with Helium, a modern web application that gives you all the functionality of Get Organized, and then some, on the go!&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Get Organized has been rebuilt from the ground up as Helium, a new website. All the features you&apos;re used with Get Organized, a modern redesign, plus so much more!&lt;br /&gt;&lt;br /&gt;Past and present at-a-glance schedules are available anytime on any device. Create more flexible assignments and classes, retrieve a full workup of your grades at any time, get assignment notifications, request information from teachers, and so much more! Switch today!&lt;/html&gt;"/>
+            <Property name="verticalAlignment" type="int" value="1"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="heliumImg1">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/adl/go/images/helium_grades.png"/>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="heliumIntroLabel1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Get Organized? Nope, Now We&apos;re Helium!&lt;/html&gt;"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;a href=&quot;https://www.heliumedu.com&quot;&gt;www.heliumedu.com&lt;/a&gt;&lt;/html&gt;"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseReleased"/>
+            <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseExited"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hyperlinkLabel1MouseEntered"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
